force-app/main/default/objects/StopSales__c/StopSales__c.object-meta.xml
<CustomObject>
    
    <label>Stop de Venda</label>
    <nameField>
        <displayFormat>STOP-{0000}</displayFormat>
        <label>Nome</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stop de Vendas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>