force-app/main/default/objects/StopSales__c/fields/Approvers__c.field-meta.xml
<CustomField>
    <fullName>Approvers__c</fullName>
    <label>Alçadas Aprovadoras</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>GGN</fullName>
            </value>
            <value>
                <fullName>InvesteeDirector</fullName>
            </value>
            <value>
                <fullName>ClusterDirector</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>