force-app/main/default/objects/StopSales__c/fields/Cluster__c.field-meta.xml
<CustomField>
    <fullName>Cluster__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cluster</label>
    <referenceTo>Cluster__c</referenceTo>
    <relationshipLabel>Stop de Vendas</relationshipLabel>
    <relationshipName>Stop_de_Vendas</relationshipName>
    <type>Lookup</type>
</CustomField>