force-app/main/default/objects/StopSales__c/fields/Family__c.field-meta.xml
<CustomField>
    <fullName>Family__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Família de Produto</label>
    <referenceTo>Family__c</referenceTo>
    <relationshipLabel>Stop de Vendas</relationshipLabel>
    <relationshipName>Stop_de_Vendas</relationshipName>
    <type>Lookup</type>
</CustomField>