force-app/main/default/objects/StopSales__c/fields/InitialDate__c.field-meta.xml
<CustomField>
    <fullName>InitialDate__c</fullName>
    <label>Data Vigência Inicial</label>
    <required>true</required>
    <type>Date</type>
</CustomField>