force-app/main/default/objects/StopSales__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Ativo?</label>
    <type>Checkbox</type>
</CustomField>