force-app/main/default/objects/StopSales__c/fields/OrderRecordType__c.field-meta.xml
<CustomField>
    <fullName>OrderRecordType__c</fullName>
    <label>Tipos de Pedidos</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IndustryBonification</fullName>
            </value>
            <value>
                <fullName>Bonification</fullName>
            </value>
            <value>
                <fullName>AccountOrder</fullName>
            </value>
            <value>
                <fullName>ZCCO</fullName>
            </value>
            <value>
                <fullName>ZCEF</fullName>
            </value>
            <value>
                <fullName>ZCNO</fullName>
            </value>
            <value>
                <fullName>BarterSale</fullName>
            </value>
            <value>
                <fullName>ZVTR</fullName>
            </value>
            <value>
                <fullName>FutureSale</fullName>
            </value>
            <value>
                <fullName>CurrencySale</fullName>
            </value>
            <value>
                <fullName>ZVTF</fullName>
            </value>
            <value>
                <fullName>ZVTS</fullName>
            </value>
            <value>
                <fullName>ExchangeSale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>