force-app/main/default/objects/StopSales__c/fields/Product2__c.field-meta.xml
<CustomField>
    <fullName>Product2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Stop de Vendas</relationshipLabel>
    <relationshipName>Stop_de_Vendas</relationshipName>
    <type>Lookup</type>
</CustomField>