force-app/main/default/objects/StopSales__c/fields/SalesOffice__c.field-meta.xml
<CustomField>
    <fullName>SalesOffice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Escritório de Vendas</label>
    <referenceTo>SalesOffice__c</referenceTo>
    <relationshipLabel>Stop de Vendas</relationshipLabel>
    <relationshipName>Stop_de_Vendas</relationshipName>
    <type>Lookup</type>
</CustomField>