force-app/main/default/objects/StopSales__c/fields/SalesOrg__c.field-meta.xml
<CustomField>
    <fullName>SalesOrg__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organização de Vendas</label>
    <referenceTo>SalesOrg__c</referenceTo>
    <relationshipLabel>Stop de Vendas</relationshipLabel>
    <relationshipName>Stop_de_Vendas</relationshipName>
    <type>Lookup</type>
</CustomField>