force-app/main/default/objects/StopSales__c/fields/SalesTeam__c.field-meta.xml
<CustomField>
    <fullName>SalesTeam__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Equipe de Vendas</label>
    <referenceTo>SalesTeam__c</referenceTo>
    <relationshipLabel>Stop de Vendas</relationshipLabel>
    <relationshipName>Stop_de_Vendas</relationshipName>
    <type>Lookup</type>
</CustomField>